third_party/rust/wat/tests/regression/empty.wast
(assert_malformed (module quote "") "x")
(assert_malformed (module quote "; foo") "x")
(assert_malformed (module quote "(; foo ;)") "x")
(assert_malformed (module quote " ") "x")
(assert_malformed (module quote "\t") "x")
